--- a/server/docker/development/Dockerfile
+++ b/server/docker/development/Dockerfile
@@ -4,11 +4,16 @@ FROM node:latest
 # Set the working directory in the container
 WORKDIR /usr/src/app
 
+# Suppress non-critical warnings
+ENV NODE_NO_WARNINGS=1
+
 # Copy package.json and package-lock.json
 COPY package*.json ./
 
-# Install dependencies
-RUN npm install
+# Clear npm cache and install dependencies
+# - `--legacy-peer-deps`: Allows installation despite peer dependency conflicts
+# - `--loglevel=error`: Reduces verbosity to suppress non-critical warnings
+RUN npm cache clean --force && npm install --legacy-peer-deps --loglevel=error
 
 # Copy the rest of the code
 COPY . .
