--- a/package.json
+++ b/package.json
@@ -30,5 +30,8 @@
     "husky": "^9.1.6",
     "lint-staged": "^15.2.10",
     "prettier": "3.3.3"
+  },
+  "dependencies": {
+    "joi": "^17.13.3"
   }
 }
