--- a/server/package.json
+++ b/server/package.json
@@ -31,6 +31,7 @@
     "mongoose": "^8.6.2",
     "rate-limiter-flexible": "^5.0.3",
     "resend": "^4.0.0",
+    "socket.io": "^4.8.1",
     "source-map-support": "^0.5.21",
     "uuid": "^10.0.0",
     "winston": "^3.14.2",
