feat: Implement ticketing system with WebSocket support and line manager queueing
- Added Ticket, LineManager, PublicIds, and Workspace models to align with project requirements
  and data flow.
- Developed createTicket controller to handle ticket creation with validation, assigning line
  managers, and utilizing available public IDs.
- Implemented helper functions for efficient line manager assignment and queueing logic.
- Established WebSocket server on a separate port for handling real-time ticketing interactions.
- Added authMiddleware for WebSocket connections to validate public IDs.
- Built WebSocket event handling functions (onJoinRoom, startChat, endChat) to manage client
  queueing, waiting time calculations, and chat session handling with line managers.
- Configured dynamic waiting time calculations to update based on queue position.
- Tested WebSocket events in Postman, ensuring proper connections, ticket ID handling, and
  message flow.

This commit establishes the foundational structure for real-time ticketing and queue management,
with detailed event handling and a secure WebSocket setup.

--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,9 @@
   "type": "module",
   "scripts": {
     "dev": "cross-env NODE_ENV=development nodemon",
-    "start": "cross-env NODE_ENV=production node server/server.js"
+    "start": "cross-env NODE_ENV=production node server/server.js",
+    "start:ws": "cross-env NODE_ENV=production node src/websocketServer.js",
+    "dev:ws": "cross-env NODE_ENV=development nodemon src/websocketServer.js"
   },
   "keywords": [],
   "author": "",
