Configuration of successfull communication of kafka producer and consumer

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -6,12 +6,14 @@ services:
         image: 'mongo'
         volumes:
             - mongo-data:/data/db
-        networks:
-            - queue-net
         env_file:
             - ./.env.development
+        ports:
+            - '27017:27017'
         command: mongod --bind_ip_all
         restart: always
+        networks:
+            - queue-net
 
     client:
         container_name: client
@@ -68,11 +70,20 @@ services:
         environment:
             KAFKA_BROKER_ID: 1
             KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
-            KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT
-            KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka:9092,PLAINTEXT://localhost:9092
+            KAFKA_ADVERTISED_LISTENERS: INSIDE://kafka:9092
+            KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: INSIDE:PLAINTEXT
+            KAFKA_INTER_BROKER_LISTENER_NAME: INSIDE
             KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
         ports:
             - '9092:9092'
+        networks:
+            - queue-net
+    kafka-consumer:
+        build:
+            context: ./kafka-consumer
+            dockerfile: docker/Dockerfile
+        depends_on:
+            - kafka
         networks:
             - queue-net
 
