--- a/server/.env.production
+++ b/server/.env.production
@@ -2,11 +2,11 @@ ENV=development
 PORT=5000
 SERVER_URL=http://localhost:5000
 
-DATABASE_URL="mongodb+srv://Michael:Michael2003@cluster0.1t7sf.mongodb.net/"
+DATABASE_URL="mongodb://mongo_user:mongo_password@mongo:27017/db_name?authSource=admin"
 
 FRONTEND_URL="http://localhost:5173/"
 VITE_SERVER_URL=http://localhost:5000
 
 EMAIL_API_KEY=""
-MONGO_INITDB_ROOT_USERNAME="Michael"
-MONGO_INITDB_ROOT_PASSWORD="Michael2003" 
+MONGO_INITDB_ROOT_USERNAME="mongo_user"
+MONGO_INITDB_ROOT_PASSWORD="mongo_password"
