--- a/client/package.json
+++ b/client/package.json
@@ -10,14 +10,51 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.3.3",
+    "@emoji-mart/data": "^1.2.1",
+    "@emoji-mart/react": "^1.1.1",
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
+    "@fortawesome/fontawesome-svg-core": "^6.5.2",
+    "@fortawesome/free-brands-svg-icons": "^6.5.1",
+    "@fortawesome/free-regular-svg-icons": "^6.5.2",
+    "@fortawesome/free-solid-svg-icons": "^6.5.2",
+    "@fortawesome/react-fontawesome": "^0.2.0",
+    "@heroicons/react": "^2.1.3",
+    "@loadable/component": "^5.16.3",
+    "@material-tailwind/react": "^2.1.9",
     "@mui/icons-material": "^6.1.1",
     "@mui/material": "^6.1.1",
+    "@radix-ui/react-select": "^2.1.2",
+    "@reduxjs/toolkit": "^2.3.0",
+    "@tanstack/react-query": "^5.45.1",
     "axios": "^1.7.7",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
+    "date-fns": "^3.6.0",
+    "emoji-mart": "^5.6.0",
+    "formik": "^2.4.5",
+    "http-proxy-middleware": "^2.0.6",
+    "jwt-decode": "^4.0.0",
+    "lodash": "^4.17.21",
+    "lucide-react": "^0.454.0",
+    "memoize-one": "^6.0.0",
+    "query-string": "^9.0.0",
     "react": "^18.3.1",
+    "react-bootstrap": "^2.10.1",
+    "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.26.2"
+    "react-icons": "^5.2.0",
+    "react-query": "^3.39.3",
+    "react-redux": "^9.1.0",
+    "react-router-dom": "^6.26.2",
+    "react-spinners": "^0.13.8",
+    "react-toastify": "^10.0.4",
+    "react-transition-group": "^4.4.5",
+    "socket.io-client": "^4.7.4",
+    "tailwind-merge": "^2.5.4",
+    "tailwindcss-animate": "^1.0.7",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
