Datacube crud joined with Kafka

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -86,6 +86,7 @@ services:
             - kafka
         networks:
             - queue-net
+        restart: on-failure
 
 networks:
     queue-net:
