--- a/kafka-consumer/package.json
+++ b/kafka-consumer/package.json
@@ -2,6 +2,7 @@
     "name": "kafka-consumer",
     "version": "1.0.0",
     "description": "\"Handles datacube querying\"",
+    "type": "module",
     "main": "index.js",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1"
@@ -9,6 +10,7 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
-        "kafkajs": "^2.2.4"
+        "kafkajs": "^2.2.4",
+        "axios": "^0.27.2"
     }
 }
