--- a/.env.example
+++ b/.env.example
@@ -2,11 +2,16 @@ ENV=development
 PORT=5000
 SERVER_URL=http://localhost:5000
 
-DATABASE_URL="mongodb://<your-mongodb-usernam>:<your-mongodb-password>@mongo:27017/<database-name>?authSource=admin"
+
 
 FRONTEND_URL="http://localhost:5173/"
 VITE_SERVER_URL=http://localhost:5000
 
-EMAIL_API_KEY=""
-MONGO_INITDB_ROOT_USERNAME= <your-mongodb-usernam>
-MONGO_INITDB_ROOT_PASSWORD=<your-mongodb-password>
+#Database setup
+DATABASE_URL="mongodb+srv://Michael:Michael2003@cluster0.1t7sf.mongodb.net/"
+MONGO_INITDB_ROOT_USERNAME="Michael"
+MONGO_INITDB_ROOT_PASSWORD="Michael2003" 
+
+# Authentication and API keys
+JWT_SECRET="DowellSecretKey" # Replace with a strong secret key for production
+EMAIL_API_KEY="your_email_api_key_here" # Add your email API key if needed
