--- a/client/package.json
+++ b/client/package.json
@@ -43,6 +43,7 @@
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.1",
     "react-day-picker": "^8.10.1",
+    "react-device-detect": "^2.2.3",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.0",
     "react-query": "^3.39.3",
